@@ -32,21 +32,38 @@ def debug_application_factory(global_conf, **local_conf):
         provideAdapter(do_not_reraise_exception, (iface, ), IReRaiseException)
     # Return the created application
     return app
-    
 
-def interactive_debug_prompt(zope_conf=os.path.join('parts', 'etc',
-                                                    'zope.conf')):
+def interactive_debug_prompt(
+    zope_conf=os.path.join('parts', 'etc', 'zope.conf')):
+
     db = zope.app.wsgi.config(zope_conf)
     debugger = zope.app.debug.Debugger.fromDatabase(db)
-    # Invoke an interactive interpreter shell
-    banner = ("Welcome to the interactive debug prompt.\n"
-              "The 'root' variable contains the ZODB root folder.\n"
-              "The 'app' variable contains the Debugger, 'app.publish(path)' "
-              "simulates a request.")
-    code.interact(banner=banner, local={'debugger': debugger,
-                                        'app':      debugger,
-                                        'root':     debugger.root()})
+    globals_ = {
+        'debugger': debugger,
+        'app': debugger,
+        'root': debugger.root()}
 
+    if len(sys.argv) > 1:
+        # There're arguments passed to the command. We replicate the
+        # "old" zopectl run command behaviour that would execfile()
+        # the second argument.
+
+        # The current first argument is the interactive_debugger command
+        # itself. Pop it from the args list and as a result, the script
+        # to run is the first argument.
+        del sys.argv[0]
+
+        globals_['__file__'] = sys.argv[0]
+        execfile(sys.argv[0], globals_)
+        sys.exit()
+
+    # Invoke an interactive interpreter prompt
+    banner = (
+        "Welcome to the interactive debug prompt.\n"
+        "The 'root' variable contains the ZODB root folder.\n"
+        "The 'app' variable contains the Debugger, 'app.publish(path)' "
+        "simulates a request.")
+    code.interact(banner=banner, local=globals_)
 
 # To retain backwards compatibilty with the ctl scripts generated by previous
 # versions of grokproject we keep the zdaemon controller code.
